# nylon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  coverage.sh  dissector.lua  distribute-conf.sh  go.mod  go.sum  init-integration-runner.sh  init-smoke-runner.sh  integration-test-local.sh  main.go  mise.toml  nylon.service  sample-central.yaml  sample-node.yaml  smoke-test-local.sh  trace.sh  unit-test-coverage.sh
cmd/: bundle.go  flags.go  hosts.go  init.go  inspect.go  join.go  key.go  net.go  new_client.go  new_net.go  probe.go  prompts.go  reload.go  render.go  root.go  run.go  status.go  utils.go  verify.go
core/: entrypoint.go  future.go  future_test.go  ipc.go  ipc_handler.go  ipc_handler_test.go  nylon.go  nylon_apply.go  nylon_apply_test.go  nylon_distribution.go  nylon_endpoints.go  nylon_gc.go  nylon_passive.go  nylon_scheduler.go  nylon_scheduler_test.go  nylon_sock.go  nylon_tc.go  nylon_trace.go  nylon_unicast.go  nylon_unicast_test.go  nylon_wireguard.go  otel.go  router.go  router_algo.go  router_exit_test.go  router_harness.go  router_io.go  router_test.go  router_utils.go  routerevent_string.go  runtime.go  serialize.go  state.go  sys_darwin.go  sys_linux.go  sys_physical.go  sys_utils.go  sys_virtual.go  sys_windows.go  utils.go
demo/: .gitignore  README.md  docker-compose.yml  record.sh
docs/: index.mdx  nylon.drawio  why-nylon.mdx
dp_wireguard/: wg_winsvc.go  wgquick.go  wireguard.go
e2e/: connectivity_test.go  distribution_test.go  exit_node_test.go  harness.go  healthcheck_test.go  json_logging_test.go  utils.go  (+7 more)
(+201 files in other folders)
