[package]
name = "ny"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
defguard_wireguard_rs = {git = "https://github.com/DefGuard/wireguard-rs.git"}
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
anyhow = "1.0.91"
log = "0.4.22"
env_logger = "0.11.5"
crossbeam-channel = "0.5.13"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = "0.7.12"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde_with = "3.11.0"
root = { git = "https://github.com/encodeous/root.git" }
ctrlc = "3.4.5"
base64 = "0.22.1"
bitcode = { version = "0.6.3", features = ["serde"]}
chrono = { version = "0.4.38", features = ["serde"]}
thiserror = "2.0.0"
aws-lc-rs = "1.10.0"
hex = { version = "0.4.3", features = ["serde"] }
educe = "0.6.0"
clap = { version = "4.5.20", features = ["derive"] }
zeroize = "1.8.1"

[target.'cfg(target_os = "linux")'.dependencies]
iptables = "0.5.2"
